Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/GetClass.out
GetClass.java:12:69: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.Class<compiler.misc.type.captureof: 1, ? extends java.lang.Class>, java.lang.Class<? extends java.lang.Class<GetClass>>)
1 error
